<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/current_condition_title"
                android:text="@string/current_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/current_condition_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/temperature_title"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/current_condition_value"
                android:text="@string/no_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/current_condition_title"
                app:layout_constraintEnd_toStartOf="@+id/icon_value"
                app:layout_constraintTop_toTopOf="@+id/current_condition_title"
                app:layout_constraintBottom_toBottomOf="@+id/current_condition_title"/>


        <ImageView
                android:id="@+id/icon_value"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/weather_icon"
                app:layout_constraintStart_toEndOf="@+id/current_condition_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/current_condition_value"
                app:layout_constraintBottom_toBottomOf="@+id/current_condition_value"
        />

        <TextView
                android:id="@+id/temperature_title"
                android:text="@string/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/temperature_value"
                app:layout_constraintTop_toBottomOf="@id/current_condition_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/wind_speed_title"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/temperature_value"
                android:text="@string/no_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/temperature_title"
                app:layout_constraintEnd_toStartOf="@+id/icon_value"
                app:layout_constraintTop_toTopOf="@+id/temperature_title"
                app:layout_constraintBottom_toBottomOf="@+id/temperature_title"/>


        <TextView
                android:id="@+id/wind_speed_title"
                android:text="@string/wind_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/wind_speed_value"
                app:layout_constraintTop_toBottomOf="@id/temperature_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/wind_direction_title"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/wind_speed_value"
                android:text="@string/no_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/wind_speed_title"
                app:layout_constraintEnd_toStartOf="@+id/icon_value"
                app:layout_constraintTop_toTopOf="@+id/wind_speed_title"
                app:layout_constraintBottom_toBottomOf="@+id/wind_speed_title"/>

        <TextView
                android:id="@+id/wind_direction_title"
                android:text="@string/wind_direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/wind_direction_value"
                app:layout_constraintTop_toBottomOf="@id/wind_speed_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/wind_direction_value"
                android:text="@string/no_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/wind_direction_title"
                app:layout_constraintBottom_toBottomOf="@+id/wind_direction_title"
                app:layout_constraintEnd_toStartOf="@+id/icon_value"
                app:layout_constraintTop_toTopOf="@+id/wind_direction_title"/>
        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>